@@ -1,5 +1,8 @@
 2006-10-08  Thomas Schwinge  <tschwinge@gnu.org>
 
+	* linux/dev/drivers/scsi/sd_ioctl.c: Move file...
+	* linux/src/drivers/scsi/sd_ioctl.c: ... here.
+
 	* linux/dev/drivers/scsi/sd.c: Move file...
 	* linux/src/drivers/scsi/sd.c: ... here.
 
